Finalizando a lage page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,24 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+
+    & h5, & h1, & p{
+        color: #f2f2f2;
+    }
+
+    & p{
+        font-weight: bold;
+    }
+
+    & .btn{
+        width: 200px;
+        background-color: coral;
+        border: none;
+        box-shadow: 0px 0px 20px 1px rgba(255, 127, 80, 0.765); 
+        &:hover{
+            scale: 1.1;
+        }
+    }
 }
 #home span{
     color: coral;
