--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,10 +64,10 @@
     justify-content: center;
     align-items: flex-start;
 
-    & h5, & h1, & p{
+/*     & h5, & h1, & p{
         color: #f2f2f2;
     }
-
+ */
     & p{
         font-weight: bold;
     }
