--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@
         box-shadow: 0px 0px 20px 1px rgba(255, 127, 80, 0.765); 
         &:hover{
             scale: 1.1;
+            background-color: rgb(255, 142, 101);
         }
     }
 }
