--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,17 +184,17 @@ footer{
         border-top: 1px solid #f2f2f249;
         position: absolute;
         background-color: #0A063E;
-        bottom: -80px;
-        height: 80px;
+        bottom: -100px;
+        height: 100px;
         width: 100%;
         text-align: center;
         color: #f2f2f2;
-        padding-top: 10px;
+        padding-top: 20px;
 
         & a{
             color: #f2f2f2;
-            font-size: 10px;
-            margin: 0 30px;
+            font-size: 20px;
+            margin: 10px 30px;
         }
     }
 }
