--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,10 +30,14 @@
         transition: all 0.5s;
         color: #0A063E;
 
+        & span{
+            color: #0A063E;
+        }
+
         & .login-icon{
             color: #0A063E;
         }
-        
+
         &:nth-child(5), &:nth-child(6){
           padding: 10px 15px;
           margin: 0 5px;
