--- a/layouts/produtos/produtos.css
+++ b/layouts/produtos/produtos.css
@@ -59,7 +59,9 @@
     margin-top: 10px;
     transition: transform 0.3s ease-in-out;
 }
-
+.card-img-top{
+    height: 300px;
+}
 .card:hover {
     transform: scale(1.05);
 }
